--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,12 @@
     "require": {
         "zendframework/zend-modulemanager": "2.*",
         "zendframework/zend-code": "2.*",
-        "zendframework/zend-eventmanager": "2.*"
+        "zendframework/zend-eventmanager": "2.*",
+        "zendframework/zend-console": "2.*",
+        "zendframework/zend-mvc": "2.*"
+    },
+    "require-dev": {
+        "mockery/mockery": "dev-master@dev"
     },
     "autoload": {
         "classmap": [
