Add PHPUnit, Phake, and a VERY happy test
I decided to take a shot at refactoring the getCacheCode method into a class, as Evan had mentioned in the todo. So far there's no actually useful tests, but I've configured the module for a PSR src directory + added a basic test class template. This should be a good base for extracting and refactoring from here

--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,16 @@
         }
     ],
     "require": {
-        "zendframework/zend-modulemanager": "2.*",
-        "zendframework/zend-code": "2.*",
-        "zendframework/zend-eventmanager": "2.*"
+        "zendframework/zendframework": "2.*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "4.5.*",
+        "phake/phake": "1.0.*"
     },
     "autoload": {
         "classmap": [
-            "Module.php"
+            "Module.php",
+            "src/"
         ]
     }
 }
